--- a/client/components/Header/header.module.css
+++ b/client/components/Header/header.module.css
@@ -6,13 +6,15 @@
 
 .header__inner {
   display: grid;
-  grid-template-columns: 1fr 300px;
+  grid-template-columns: 150px 1fr 300px;
   grid-template-rows: 100px;
   align-items: center;
 }
 
 .header__logo {
   font-size: 3rem;
+  text-decoration: none;
+  color: #000;
 }
 
 .options {
@@ -48,11 +50,26 @@
 }
 
 .button {
-  min-width: 10rem;
-  height: 3.5rem;
+  min-width: 12rem;
+  height: 4rem;
   background: rgb(0, 0, 0);
   border: none;
   cursor: pointer;
   color: #fff;
   text-transform: uppercase;
+}
+
+.nav__menu {
+  display: flex;
+}
+
+.nav__link {
+  margin-right: 2rem;
+  font-size: 2rem;
+  text-decoration: none;
+  color: #000;
+}
+
+.nav__item {
+  list-style: none;
 }
