--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
 *,
 *:before,
 *:after {
@@ -11,6 +13,7 @@ html {
   font-size: 62.5%;
 }
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
