--- a/client/styles/pages/index.module.css
+++ b/client/styles/pages/index.module.css
@@ -99,15 +99,23 @@
 
 .feature {
   background: rgb(12, 12, 12);
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 1rem;
 }
 
 .feature__wrapper {
   display: grid;
   grid-template-columns: 300px repeat(3, 1fr);
-  padding: 2rem 0;
+  padding: 3rem 1rem;
+  align-items: center;
+
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.feature__title {
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
 .feature__box {
@@ -137,6 +145,7 @@
   color: #fff;
   text-transform: uppercase;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 .form__input {
