--- a/client/components/Footer/footer.module.css
+++ b/client/components/Footer/footer.module.css
@@ -34,3 +34,16 @@
   font-weight: 400;
   margin-top: 0.5rem;
 }
+
+.copyright {
+  margin-top: 5rem;
+  border-top: 1px solid rgb(126, 126, 126);
+  padding: 1rem;
+}
+
+.copyright__desc {
+  margin-top: 1rem;
+  display: block;
+  text-align: center;
+  font-size: 1.4rem;
+}
