--- a/client/components/ProductList/productList.module.css
+++ b/client/components/ProductList/productList.module.css
@@ -3,17 +3,33 @@
   gap: 30px;
   justify-content: center;
   justify-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 250px));
   list-style: none;
   justify-items: center;
+  padding-bottom: 5rem;
+  padding-top: 5rem;
 }
 
 .product {
-  border: 1px solid #ccc;
+  width: 250px;
+}
+.product__content {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0;
+  color: rgb(24, 23, 23);
+}
+.product__price {
+  margin-top: 1rem;
+  align-self: flex-start;
 }
 
 .product__img {
-  height: 250px;
+  height: 350px;
   width: 100%;
   object-fit: cover;
+}
+
+.link {
+  text-decoration: none;
 }
