--- a/client/components/SideBar/sideBar.module.css
+++ b/client/components/SideBar/sideBar.module.css
@@ -2,6 +2,14 @@
   border-right: 1px solid #ccc;
 }
 
+.sidebar__title {
+  font-size: 2rem;
+  text-align: center;
+  text-transform: capitalize;
+  background: rgb(245, 245, 245);
+  padding: 2rem;
+}
+
 .sidebar__nav {
   margin-top: 2rem;
 }
