--- a/client/components/Header/header.module.css
+++ b/client/components/Header/header.module.css
@@ -46,6 +46,7 @@
 .cartDropDown {
   position: relative;
   border: 2px solid #fff;
+  z-index: 2;
 }
 
 .cartDropDown:hover {
@@ -61,9 +62,10 @@
   background: rgb(255, 255, 255);
   border: 2px solid rgb(15, 15, 15);
   width: 230px;
-  height: 300px;
-  display: none;
+  height: auto;
+  /* display: none; */
 }
+
 .cartDropDown__list::after {
   content: '';
   display: block;
@@ -75,8 +77,51 @@
   width: 28px;
 }
 
+.cartDropDown__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 1rem;
+  text-transform: uppercase;
+}
+
+.cartDropDown__title {
+  font-weight: 700;
+}
+
+.cartDropDown__size,
+.cartDropDown__quantity {
+  font-size: 1.2rem;
+  color: rgb(104, 104, 104);
+}
+
 .cartDropDown__item {
   list-style: none;
+  display: grid;
+  grid-template-columns: 90px 1fr;
+  grid-template-rows: 100px;
+  padding: 0.5rem;
+  border-bottom: 1px solid rgb(228, 227, 227);
+}
+
+.cartDropDown__item:last-of-type {
+  display: flex;
+}
+
+.cartDropDown__img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.cartDropDown__link {
+  display: block;
+  padding: 1rem;
+  background: #000;
+  text-decoration: none;
+  width: 100%;
+  color: #fff;
+  text-align: center;
 }
 
 .button {
