--- a/client/styles/pages/product.module.css
+++ b/client/styles/pages/product.module.css
@@ -55,7 +55,6 @@
 }
 .product__btn {
   text-transform: uppercase;
-  color: #000;
   font-size: 1.3rem;
   background: transparent;
   border: none;
@@ -64,6 +63,9 @@
   width: 100%;
   background: #000;
   color: #fff;
+}
+.product__btn:disabled {
+  cursor: not-allowed;
 }
 
 .product__btn__favorite {
