--- a/client/components/Footer/footer.module.css
+++ b/client/components/Footer/footer.module.css
@@ -1,11 +1,11 @@
 .footer {
-  background: #f5f5f7;
+  background: var(--bg-gray-color);
   min-height: 10rem;
   padding: 5rem 0;
 }
 
 .footer__wrapper {
-  max-width: 1400px;
+  max-width: var(--container-width);
   padding: 0 1rem;
   margin: 0 auto;
 }
@@ -19,9 +19,9 @@
 }
 
 .info__title {
-  font-size: 1.4rem;
+  font-size: var(--fs-small-1);
   margin-bottom: 1rem;
-  font-weight: 700;
+  font-weight: var(--font-bold);
   text-transform: uppercase;
 }
 .info__list {
@@ -29,15 +29,15 @@
 }
 
 .info__item {
-  color: rgb(126, 126, 126);
-  font-size: 1.4rem;
-  font-weight: 400;
+  color: var(--text-dark-gray-color);
+  font-size: var(--fs-small-1);
+  font-weight: var(--font-regular);
   margin-top: 0.5rem;
 }
 
 .copyright {
   margin-top: 5rem;
-  border-top: 1px solid rgb(126, 126, 126);
+  border-top: 1px solid var(--text-dark-gray-color);
   padding: 1rem;
 }
 
@@ -45,5 +45,5 @@
   margin-top: 1rem;
   display: block;
   text-align: center;
-  font-size: 1.4rem;
+  font-size: var(--fs-small-1);
 }
