--- a/client/components/IconButton/iconButton.module.css
+++ b/client/components/IconButton/iconButton.module.css
@@ -13,7 +13,7 @@
   border-radius: 50%;
   width: 1.8rem;
   height: 1.8rem;
-  color: #000;
+  color: var(--bg-dark-color);
   display: flex;
   justify-content: center;
   align-items: center;
