--- a/client/components/ProductList/productList.module.css
+++ b/client/components/ProductList/productList.module.css
@@ -14,8 +14,8 @@
 .products__info {
   margin-top: 5rem;
   text-transform: uppercase;
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: var(--fs-regular-2);
+  font-weight: var(--font-bold);
 }
 
 .product:hover .product__img {
@@ -29,8 +29,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem 0;
-  color: rgb(24, 23, 23);
-  transition: 0.3s ease-in-out;
+  color: var(--bg-dark-color);
 }
 .product__price {
   margin-top: 1rem;
@@ -45,7 +44,7 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
-  transition: 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .link {
