--- a/client/components/SideBar/sideBar.module.css
+++ b/client/components/SideBar/sideBar.module.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding-top: 15rem;
 
-  border-right: 2px solid var(--bg-dark-color);
+  border-right: 3px solid var(--bg-dark-color);
 }
 
 .sidebar__title {
@@ -31,7 +31,7 @@
   padding: 1rem;
   min-width: 8rem;
   text-align: center;
-  transition: 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 .sidebar__link__active,
