--- a/client/components/Footer/footer.module.css
+++ b/client/components/Footer/footer.module.css
@@ -47,3 +47,10 @@
   text-align: center;
   font-size: var(--fs-small-1);
 }
+
+@media screen and (max-width: 650px) {
+  .info {
+    grid-template-columns: 1fr;
+    grid-gap: 5rem;
+  }
+}
