--- a/client/components/Header/header.module.css
+++ b/client/components/Header/header.module.css
@@ -12,8 +12,8 @@
 }
 
 .logo {
-  height: 80px;
-  width: 120px;
+  height: 60px;
+  width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,6 +28,22 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+@media screen and (max-width: 650px) {
+  .logo {
+    width: 80px;
+  }
+
+  .header__inner {
+    grid-template-rows: 60px 60px;
+    grid-template-columns: 1fr;
+  }
+
+  .options {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 3;
+  }
 }
 
 .cartDropDown__wrapper::after {
