--- a/client/styles/pages/product.module.css
+++ b/client/styles/pages/product.module.css
@@ -99,3 +99,33 @@
   padding: 1rem;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1000px) {
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .product__photo {
+    overflow: hidden;
+    height: 250px;
+    width: 180px;
+  }
+  .product__inner {
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .product__content {
+    padding: 1rem;
+    border-top: 3px solid var(--bg-dark-color);
+    border-left: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .product__inner {
+    grid-template-columns: 1fr;
+    grid-template-rows: 250px 350px;
+  }
+}
