--- a/client/styles/pages/cart.module.css
+++ b/client/styles/pages/cart.module.css
@@ -32,7 +32,7 @@
 }
 
 .cart__products {
-  width: 960px;
+  max-width: 960px;
 }
 
 .cart__details {
@@ -158,4 +158,15 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1400px) {
+  .cart {
+    grid-template-columns: 1fr;
+  }
+
+  .cart__details {
+    width: 300px;
+    margin: 5rem auto;
+  }
 }
