--- a/client/styles/pages/category.module.css
+++ b/client/styles/pages/category.module.css
@@ -4,6 +4,12 @@
   min-height: 60vh;
 }
 
+@media screen and (max-width: 1000px) {
+  .category {
+    grid-template-columns: 150px 1fr;
+  }
+}
+
 @media screen and (max-width: 650px) {
   .category {
     grid-template-columns: 1fr;
