--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -57,3 +57,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.wrapper {
+  max-width: var(--container-width);
+  margin: 0 auto;
+  padding: 1rem;
+  min-height: 70vh;
+}
