--- a/client/styles/pages/loginAndRegister.module.css
+++ b/client/styles/pages/loginAndRegister.module.css
@@ -1,14 +1,9 @@
 .button {
-  margin: 1rem 0;
-  min-width: 12rem;
-  height: 4rem;
-  background: var(--bg-dark-color);
-  border: none;
-  cursor: pointer;
-  color: var(--text-light-color);
+  margin: 2rem 0;
+  width: 250px;
+  height: 3.5rem;
+  color: #fff;
+  background: #000;
   text-transform: uppercase;
-  text-decoration: none;
-  padding: 1rem;
-  display: inline-block;
-  text-align: center;
+  border: none;
 }
