--- a/client/styles/pages/product.module.css
+++ b/client/styles/pages/product.module.css
@@ -94,7 +94,7 @@
   margin-top: 0.5rem;
   height: 4rem;
   width: 100%;
-  font-size: var(--fs-small-1);
+  font-size: 1.6rem;
   text-transform: uppercase;
   padding: 1rem;
   cursor: pointer;
