--- a/client/styles/pages/index.module.css
+++ b/client/styles/pages/index.module.css
@@ -154,7 +154,7 @@
   text-indent: 1rem;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 720px) {
   .collection {
     height: auto;
     flex-direction: column;
@@ -165,6 +165,7 @@
     height: auto;
     padding-bottom: 5rem;
     padding-top: 5rem;
+    padding-left: 2rem;
   }
 
   .collection__content::before {
