--- a/client/components/SideBar/sideBar.module.css
+++ b/client/components/SideBar/sideBar.module.css
@@ -39,7 +39,7 @@
   color: var(--bg-dark-color);
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1000px) {
   .sidebar__list {
     display: flex;
     flex-wrap: wrap;
@@ -48,6 +48,7 @@
     padding: 1rem;
     margin-bottom: 2rem;
     border-bottom: 3px solid var(--bg-dark-color);
+    border-top: 3px solid var(--bg-dark-color);
     border-right: none;
   }
 }
