--- a/client/styles/pages/cart.module.css
+++ b/client/styles/pages/cart.module.css
@@ -32,7 +32,7 @@
   grid-gap: 20px;
 }
 .cart__price {
-  margin: 1rem;
+  text-align: center;
 }
 
 .cart__products {
@@ -137,7 +137,7 @@
 
 .cart__product {
   display: grid;
-  grid-template-columns: 1fr 1fr repeat(2, minmax(max-content, 50px));
+  grid-template-columns: 1fr 300px repeat(2, minmax(max-content, 50px));
   align-items: center;
   margin-bottom: 1rem;
   background: var(--bg-gray-color);
@@ -173,19 +173,16 @@
 
   .cart__details {
     width: 100%;
-    margin: 1rem auto;
+    justify-self: center;
   }
 }
-
 @media screen and (max-width: 600px) {
-  .cart__desc {
-    padding: 0.5rem;
-  }
-  .cart__price {
-    margin: 0.5rem;
-  }
-
   .cart__product {
-    grid-template-columns: 160px 1fr 80px 30px;
+    grid-template-columns: 1fr 100px repeat(2, minmax(max-content, 50px));
+  }
+}
+@media screen and (max-width: 500px) {
+  .cart__product {
+    grid-template-columns: 1fr;
   }
 }
